Settings for rspecs retuned

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,16 @@
-.gitignore
+# some nonexistent file
 .idea
 
+# Ignore self
+.gitignore
 
 # Ignore bundler config.
 /.bundle
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -15,6 +19,8 @@
 /node_modules
 /yarn-error.log
 .byebug_history
+/spec/examples.txt
 
+# Ignore local files for ENV=development
 public/uploads
 public/assets
