--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -157,5 +157,14 @@ test:
         max_pool_size: 5
   options:
     raise_not_found_error: false
+
 production:
-  uri: <%= ENV['MONGOHQ_URL'] %>
+  clients:
+    default:
+      database: library_exercise_production
+      uri: <%= ENV['MONGOHQ_URL'] %>
+      max_retries_on_connection_failure: 20
+#      persist_in_safe_mode: true
+#      skip_version_check: true
+      hosts:
+        - localhost:27017
