--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -162,7 +162,7 @@ production:
   clients:
     default:
       database: library_exercise_production
-      uri: <%= ENV['MONGOHQ_URL'] %>
+#      uri: <%= ENV['MONGOHQ_URL'] %>
       max_retries_on_connection_failure: 20
 #      persist_in_safe_mode: true
 #      skip_version_check: true
