--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -162,9 +162,10 @@ production:
   clients:
     default:
       database: library_exercise_production
-#      uri: <%= ENV['MONGOHQ_URL'] %>
+      uri: <%= ENV['MONGOHQ_URI'] %>
+      options:
+        skip_version_check: true
+      safe: true
       max_retries_on_connection_failure: 20
-#      persist_in_safe_mode: true
-#      skip_version_check: true
       hosts:
         - localhost:27017
